Swagger info added .

--- a/Example.Api/appsettings.json
+++ b/Example.Api/appsettings.json
@@ -12,5 +12,15 @@
     "Issuer": "www.example.com",
     "Expiration": 15,
     "Key": "mysecretkeymysecretkey"
+  },
+  "SwaggerInfo": {
+    "Title": "Example Application",
+    "Version": "v1",
+    "Description": "Example .Net Core Swagger & JWT Token aplication",
+    "Contact": {
+      "Name": "Okan Celik",
+      "Email": "okan.celik@outlook.com",
+      "Url": ""
+    }
   }
 }
