--- a/Example.Api/appsettings.json
+++ b/Example.Api/appsettings.json
@@ -21,6 +21,11 @@
       "Name": "Okan Celik",
       "Email": "okan.celik@outlook.com",
       "Url": ""
+    },
+    "Authorization": {
+      "AuthenticationScheme": "Bearer",
+      "Name": "Authorization",
+      "Description" : "JWT Authorization header using the Bearer scheme. Example: 'Authorization: Bearer {token}'"
     }
   }
 }
