Sample Endpoint added.

--- a/Example.Api/appsettings.json
+++ b/Example.Api/appsettings.json
@@ -14,7 +14,7 @@
     "Key": "mysecretkeymysecretkey"
   },
   "SwaggerInfo": {
-    "Title": "Example Application",
+    "Title": "Example Application API Document",
     "Version": "v1",
     "Description": "Example .Net Core Swagger & JWT Token aplication",
     "Contact": {
