--- a/Example.Api/Example.Api.csproj
+++ b/Example.Api/Example.Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\okanc\source\repos\Example\Example.Api\Example.Api.xml</DocumentationFile>
+    <DocumentationFile>Documents\Example.Api.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
